--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.13.1",
     "express-session": "~1.0.0",
     "fb": "^1.1.1",
+    "image-downloader": "^2.0.0",
     "jade": "~1.11.0",
     "jquery.rateit": "^1.0.24",
     "leaflet-image": "^0.2.1",
